rundeckpro-deployment.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rudeckpro-nginx
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"

spec:
  ingressClassName: nginx-example
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: rundeckpro
          servicePort: 8080
        path: /


apiVersion: v1
kind: Service
metadata:
  name: rundeckpro
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 4440
  selector:
    app: rundeckpro
  externalTrafficPolicy: Local
  sessionAffinity: ClientIP

---

apiVersion: apps/v1 
kind: Deployment
metadata:
  name: rundeckpro
  namespace: default
  labels:
    app: rundeckpro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rundeckpro
  template:
    metadata:
      labels:
        app: rundeckpro
    spec:
      containers:
      - name: rundeck
        image: rundeckpro/enterprise:SNAPSHOT
        volumeMounts:
          - mountPath: /home/rundeck/etc/rundeckpro-license.key
            name: license
            subPath: rundeckpro-license.key
          - mountPath: /home/rundeck/etc/admin-role.aclpolicy
            name: acl
            subPath: admin-role.aclpolicy
          - mountPath: /home/rundeck/.kube/config
            name: kubeconfig
            subPath: config
        ports:
        - containerPort: 4440
        livenessProbe:
          # an http probe
          httpGet:
            path: /
            port: 4440
            scheme: HTTP
          initialDelaySeconds: 500
          periodSeconds: 120
        readinessProbe:
          httpGet:
            path: /
            port: 4440
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
      volumes:
      - name: license
        secret:
          secretName: rundeckpro-license
          items:
          - key: rundeckpro-license.key
            path: rundeckpro-license.key
      - name: acl
        secret:
          secretName: rundeckpro-admin-acl
          items:
          - key: admin-role.aclpolicy
            path: admin-role.aclpolicy
      - name: kubeconfig
        secret:
          secretName: kubeconfig
          items:
          - key: config
            path: config
